--- a/ElderEcho/ElderEcho.css
+++ b/ElderEcho/ElderEcho.css
@@ -146,7 +146,7 @@ nav ul li a:hover {
     justify-content: space-between;
     align-items: center;
     padding: 40px;
-    background-color: #E8DEC8;
+    background-color: rgba(232, 222, 200, 0.2);
 }
 
 .why-content {
