--- a/Front-end-web-final/static/style.css
+++ b/Front-end-web-final/static/style.css
@@ -19,8 +19,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1; /* 确保画布在其他元素之下 */
-    pointer-events: none; /* 防止画布阻止其他元素的交互 */
+    z-index: 1; 
+    pointer-events: none;
 }
 
 /* Diary Cover Section */
@@ -191,7 +191,7 @@ body {
     border: 1px solid white;
 }
 
-/* 外部容器 */
+
 .content-wrapper {
     display: flex; 
     justify-content: space-between; 
