--- a/class9/cardsapp/style.css
+++ b/class9/cardsapp/style.css
@@ -94,6 +94,10 @@ menu {
   -ms-border-radius: 0.3em;
   -o-border-radius: 0.3em;
   box-shadow: 1px 1px 2px black;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
 }
 
 .flipped {
